bdr.BDR.scala.error
Compilation error:
BDR:21: error: ';' expected but 'if' found.
}if (readMessage()=="Y"){
 ^