bdr.BDR.scala.code
if (readMessage()=="R"){
  right()
  forward()
} else if (readMessage()=="L"){
  left()
  forward()
} else if (readMessage()=="I"){
  back()
  forward()
} else if (readMessage()=="A"){
  forward()
} else if (readMessage()=="B"){
  forward()
  forward()
}else if (readMessage()=="C"){
  forward()
  forward()
  forward()
} else if (readMessage()=="Z"){
  backward()
}if (readMessage()=="Y"){
  backward()
  backward()
  backward()
}





